{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "7e6d2150-501d-4d2a-ae21-1716f5825943",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Value",
                    "id": "be4a5db8-b95c-4be7-a24c-584aeea222b8",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Value",
                    "id": "bd86640c-5e14-4186-8dc8-78ea751343b7",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37187ad2-3abc-4ac4-a1c5-b59cb40828a8",
                    "path": "<Touchscreen>/touch0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51dfec96-a707-4a11-a46b-fd9a05fc5c70",
                    "path": "<Touchscreen>/touch1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}